# uTensor-simple-x86-demo

./: .gitmodules  CMakeLists.txt  README.md  findEvent.py  main.cpp  uTensor.lib
models/: MyModel.cpp  MyModel.h  constants.h
